[ADD] portofolio tab

--- a/css/base.css
+++ b/css/base.css
@@ -868,4 +868,73 @@ textarea {
 	text-align: center;
 }
 
-/*# sourceMappingURL=base.css.map */
+/* 2. Header
+----------------------------------------------*/
+.templatemo-block-left { width: 40%; }
+.templatemo-block-right { width: 60%; }
+.templatemo-block-left,
+.templatemo-block-right {
+	float: left;
+}
+.templatemo-header-left,
+.templatemo-header-right {	
+	height: 450px;
+}
+.templatemo-header-left {
+	background: url(../img/banner.jpg) no-repeat;
+	background-size: cover;		
+	color: #fff;
+	position: relative;	
+}
+.templatemo-header-left-overlay {
+	background-color: rgba(0,0,0,0.8);
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.templatemo-header-right {
+	background: url(../img/header-img.jpg) no-repeat;
+	background-size: cover;	
+}
+.templatemo-header-right-overlay {
+	background-color: rgba(208, 175, 81, 0.4);
+	height: 100%;
+	width: 100%;
+}
+.templatemo-header-text-wrap {
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-align-items: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	height: 100%;
+	position: relative;
+	z-index: 1000;
+}
+.templatemo-header-text {
+	margin-right: 50px;
+	text-align: right;
+	width: 100%;
+}
+.templatemo-site-name {
+	letter-spacing: 3px;
+	font-size: 45px;
+}
+.templatemo-header-hr {
+	border-top-color: #A4A2A2;
+	width: 71px;
+	display: inline-block;
+	margin: 0 10px 0 0;
+	vertical-align: middle;
+}
+.templatemo-slogan {
+	color: #A4A2A2;
+	display: inline-block;
+	font-size: 11px;
+	letter-spacing: 5px;
+}/*# sourceMappingURL=base.css.map */
+
+
