--- a/css/main.css
+++ b/css/main.css
@@ -2427,6 +2427,26 @@ header .logo a {
 .contact-info h5 {
 	color: #FF0077;
 }
+/*  */
+.resume-pad {
+	margin: 4.8rem auto 0;
+	font-family: "poppins-regular", sans-serif;
+	font-size: 1.5rem;
+	text-align: center;
+}
+.resume-pad .collapse {
+	padding: 0;
+}
+.resume-pad .icon {
+	margin-bottom: 2.1rem;
+}
+.resume-pad .icon i {
+	font-size: 4.2rem;
+	color: #FFFFFF;
+}
+.resume-pad h5 {
+	color: #FF0077;
+}
 
 /**
  * loader animation - (_layout.scss)
@@ -2597,3 +2617,54 @@ footer .copyright span:last-child::after {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+/* New Arrivals */
+.new-arrival-container {
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	max-width: 100%;
+}
+.new-arrival-overlay {
+	background: rgba(208, 175, 81, 0.4);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-align-items: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-justify-content: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+}
+.new-arrival-title {
+	color: rgb(237,237,237);
+	font-size: 2.6em;
+}
+.new-arrival-title span {
+	display: block;
+	text-align: center;
+}
+.new-arrival-title .smaller-text {
+	font-size: 0.5em;
+	font-weight: 300;
+	letter-spacing: 3px;
+}
+.font-script { font-family: 'Dancing Script', cursive; }
+.bordered-text {
+	border: 1px solid #fff;
+	padding: 5px 10px;
+}
+section { padding: 50px 0; }
+.templatemo-section-header-hr {
+	border-top-color: #D0AF51;
+	width: 185px;
+	display: inline-block;
+	margin: 0 10px 0 0;
+	vertical-align: middle;
+}
