--- a/css/main.css
+++ b/css/main.css
@@ -1840,13 +1840,15 @@ header .logo a {
 	left: -100%;
 }
 
-#portfolio .folio-title {
+#resume .folio-title {
 	color: #FFFFFF;
 	font-size: 3.3rem;
 	padding: 0 3rem;
 	margin-bottom: 0;
+	font-family: "poppins-regular", sans-serif;
+
 }
-#portfolio .folio-types {
+#resume .folio-types {
 	margin: 0;
 	padding: 0;
 	text-transform: uppercase;
@@ -1855,13 +1857,13 @@ header .logo a {
 	letter-spacing: .1rem;
 	color: rgba(255, 255, 255, 0.6);
 }
-#portfolio .folio-item:hover .overlay {
+#resume .folio-item:hover .overlay {
 	background: rgba(0, 0, 0, 0.8);
 }
-#portfolio .folio-item:hover .folio-item-cell {
+#resume .folio-item:hover .folio-item-cell {
 	left: 0;
 }
-#portfolio .folio-item:hover img {
+#resume .folio-item:hover img {
 	-webkit-transform: scale(1.05);
 	-ms-transform: scale(1.05);
 	transform: scale(1.05);
@@ -2624,7 +2626,87 @@ footer .copyright span:last-child::after {
 	display: inline-block;
 	position: relative;
 	max-width: 100%;
+	overflow: hidden;
 }
+
+.image-hover-container {
+    position: relative;
+    transition: all 0.3s ease;
+}
+.image-hover-container:hover img {
+    transform: scale(1.1);
+}
+.image-hover-container::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all 0.3s ease;
+}
+.image-hover-container:hover::after {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+.img-responsive {
+    transition: all 0.3s ease;
+    width: 100%;
+    height: auto;
+}
+
+.new-arrival-container {
+    overflow: hidden;
+}
+
+.image-hover-container {
+    position: relative;
+    transition: all 0.3s ease;
+}
+
+.image-hover-container:hover img {
+    transform: scale(1.1);
+}
+
+.image-hover-container::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all 0.5s ease;
+}
+
+.image-hover-container:hover::after {
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.img-responsive {
+    transition: all 0.5s ease;
+    width: 100%;
+    height: auto;
+}
+
+/* CSS baru untuk teks hover */
+.hover-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 1.5em;
+    font-weight: bold;
+    opacity: 0;
+    z-index: 2;
+    transition: all 0.3s ease;
+}
+
+.image-hover-container:hover .hover-text {
+    opacity: 1;
+}
+
 .new-arrival-overlay {
 	background: rgba(208, 175, 81, 0.4);
 	width: 100%;
